@@ -6,6 +6,8 @@ Changes in 0.70.1:
   * Redirects are allowed in group cooking as long as the target of the 
     redirect is also specified in the group (this allows cleaner handling
     when trying to clean up after label multiplicity)
+  * Shorten display for versions and flavors in internal debugging output.
+    Make str() output for versions and flavors return formatted strings.
 
 Changes in 0.70.0:
   o The client and server protocol versions have been changed and
